// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createFsRouteTree > basic 1`] = `
{
  "children": {
    "": {
      "children": {
        "demo": {
          "value": {
            "layout": "/demo/layout.tsx",
            "page": "/demo/page.tsx",
          },
        },
        "other": {
          "value": {
            "page": "/other/page.tsx",
          },
        },
        "test": {
          "children": {
            "[dynamic]": {
              "children": {
                "hello": {
                  "value": {
                    "page": "/test/[dynamic]/hello/page.tsx",
                  },
                },
              },
              "value": {
                "page": "/test/[dynamic]/page.tsx",
              },
            },
            "other": {
              "value": {
                "page": "/test/other/page.tsx",
              },
            },
          },
          "value": {
            "layout": "/test/layout.tsx",
            "page": "/test/page.tsx",
          },
        },
      },
      "value": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
    },
  },
}
`;

exports[`createFsRouteTree > basic 2`] = `
{
  "__pathname": "/",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
  },
}
`;

exports[`createFsRouteTree > basic 3`] = `
{
  "__pathname": "/other",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/other": {
      "nodeValue": {
        "page": "/other/page.tsx",
      },
      "params": {},
    },
  },
}
`;

exports[`createFsRouteTree > basic 4`] = `
{
  "__pathname": "/not-found",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/not-found": {
      "nodeValue": undefined,
      "params": {},
    },
  },
}
`;

exports[`createFsRouteTree > basic 5`] = `
{
  "__pathname": "/test",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/test": {
      "nodeValue": {
        "layout": "/test/layout.tsx",
        "page": "/test/page.tsx",
      },
      "params": {},
    },
  },
}
`;

exports[`createFsRouteTree > basic 6`] = `
{
  "__pathname": "/test/other",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/test": {
      "nodeValue": {
        "layout": "/test/layout.tsx",
        "page": "/test/page.tsx",
      },
      "params": {},
    },
    "/test/other": {
      "nodeValue": {
        "page": "/test/other/page.tsx",
      },
      "params": {},
    },
  },
}
`;

exports[`createFsRouteTree > basic 7`] = `
{
  "__pathname": "/test/not-found",
  "match": {
    "/": {
      "nodeValue": {
        "layout": "/layout.tsx",
        "page": "/page.tsx",
      },
      "params": {},
    },
    "/test": {
      "nodeValue": {
        "layout": "/test/layout.tsx",
        "page": "/test/page.tsx",
      },
      "params": {},
    },
    "/test/not-found": {
      "nodeValue": {
        "page": "/test/[dynamic]/page.tsx",
      },
      "params": {
        "dynamic": "not-found",
      },
    },
  },
}
`;
